Compilation warning in Node.cpp when USERSELECT_ALL is disabled https://bugs.webkit.org/show_bug.cgi?id=101025

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-11-02
Reviewed by Ryosuke Niwa.

The parameter 'treatment' is not used when USERSELECT_ALL is disabled.

* dom/Node.cpp:
(WebCore::Node::rendererIsEditable):

Canonical link: https://commits.webkit.org/119133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133279 268f45cc-cd09-0410-ab3c-d52691b4dbfc